--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--<![endif]-->
 <head>
     <link rel="stylesheet" href="index.css">
+	<!-- <link rel="stylesheet" href="index1.css"> -->
 	<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<script type="text/javascript">
@@ -148,7 +149,7 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 		</script>
 				<script type="text/javascript">
 			dtGlobals.logoEnabled = 1;
-			dtGlobals.logoURL = 'https://i.ibb.co/NV0DPrG/Sin-t-tulo.png 1x, https://i.ibb.co/NV0DPrG/Sin-t-tulo.png 2x';
+			dtGlobals.logoURL = 'https://i.ibb.co/T2ynp37/siscordlogo.png 1x, https://i.ibb.co/T2ynp37/siscordlogo.png 2x';
 			dtGlobals.logoW = '250';
 			dtGlobals.logoH = '65';
 			smartMenu = 1;
@@ -169,7 +170,7 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 	<header id="header" class="show-device-logo show-mobile-logo dt-parent-menu-clickable line-decoration logo-left" role="banner"><!-- class="overlap"; class="logo-left", class="logo-center", class="logo-classic" -->
 
 				<!-- !Top-bar -->
-		 <div id="top-bar" role="complementary" class="text-small full-width-line top-bar-opened">
+				<div role="complementary" class="text-small full-width-line top-bar-opened">
 			 <div > 
 				<div>
 					<div class="wf-table wf-mobile-collapsed">
@@ -194,7 +195,7 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 								<!-- !- Branding -->
 				<div id="branding" class="wf-td">
 
-					<a href="#!/up"><img class=" preload-me" srcset="https://i.ibb.co/NV0DPrG/Sin-t-tulo.png 1x, https://i.ibb.co/NV0DPrG/Sin-t-tulo.png 2x" width="250" height="65"  alt="Siscord SRL" /><img class="mobile-logo preload-me" srcset="https://i.ibb.co/NV0DPrG/Sin-t-tulo.png 1x, https://i.ibb.co/NV0DPrG/Sin-t-tulo.png 2x" width="250" height="65"  alt="Siscord SRL" /></a>
+					<a href="#!/up"><img class=" preload-me" srcset="https://i.ibb.co/T2ynp37/siscordlogo.png 1x, https://i.ibb.co/T2ynp37/siscordlogo.png 2x" width="250" height="65"  alt="Siscord SRL" /><img class="mobile-logo preload-me" srcset="https://i.ibb.co/T2ynp37/siscordlogo.png 1x, https://i.ibb.co/T2ynp37/siscordlogo.png 2x" width="250" height="65"  alt="Siscord SRL" /></a>
 					<div id="site-title" class="assistive-text">Siscord SRL</div>
 					<div id="site-description" class="assistive-text">Consultoria y Desarrollo</div>
 				</div>
@@ -697,8 +698,8 @@ Evitar el papel, las impresiones, la carga </br>manual de datos, los múltiples 
 				<div class="vc_empty_space"  style="height: 5px" ><span
 			class="vc_empty_space_inner"></span></div>
 
-<section id="benefits-grid-1" class="benefits-grid wf-container benefits-style-two icons-bg accent-bg light-hover-bg custom-icon-color accent-icon-hover-color static-line" data-width="100" data-columns="2" ><style type="text/css">#benefits-grid-1.icons-bg .benefits-grid-ico { height: 50px; line-height: 50px; width: 50px; }#benefits-grid-1.icons-bg .benefits-grid-ico > .fa { font-size: 24px; line-height: 50px; width: 50px;}#benefits-grid-1.custom-icon-color .benefits-grid-ico > .fa,
-					#benefits-grid-1.custom-icon-color .benefits-grid-ico > .fa { color: #FFFFFF; }</style><div class="wf-cell"><div><div class="text-big"><div class="wf-table"><div class="wf-td"><span class="benefits-grid-ico"><i class="fa fa-line-chart"></i></span></div><div class="wf-td benefits-inner"><h4>Consultoría &#038; Gestión</h4><p>Sed sodales in purus faucibus purus unde non malesuada fames ac ante ipsum primis in dolor.</p>
+<section id="benefits-grid-1" class="benefits-grid wf-container benefits-style-two icons-bg accent-bg light-hover-bg custom-icon-color accent-icon-hover-color static-line" data-width="250" data-columns="3" ><style type="text/css">#benefits-grid-1.icons-bg .benefits-grid-ico { height: 50px; line-height: 50px; width: 50px; }#benefits-grid-1.icons-bg .benefits-grid-ico > .fa { font-size: 24px; line-height: 50px; width: 50px;}#benefits-grid-1.custom-icon-color .benefits-grid-ico > .fa,
+					#benefits-grid-1.custom-icon-color .benefits-grid-ico > .fa:before { color: #FFFFFF;  }</style><div class="wf-cell"><div><div class="text-big"><div class="wf-table"><div class="wf-td"><span class="benefits-grid-ico"><i class="fa fa-line-chart"></i></span></div><div class="wf-td benefits-inner"><h4>Consultoría &#038; Gestión</h4><p>Sed sodales in purus faucibus purus unde non malesuada fames ac ante ipsum primis in dolor.</p>
 </div></div></div></div></div><div class="wf-cell"><div><div class="text-big"><div class="wf-table"><div class="wf-td"><span class="benefits-grid-ico"><i class="fa fa-code"></i></span></div><div class="wf-td benefits-inner"><h4>Ingeniería de Software</h4><p>Aplicaciones a medida. </p>
 </div></div></div></div></div><div class="wf-cell"><div><div class="text-big"><div class="wf-table"><div class="wf-td"><span class="benefits-grid-ico"><i class="fa fa-desktop"></i></span></div><div class="wf-td benefits-inner"><h4>Diseño y Desarrollo Web</h4><p>Diseño y desarrollo de sitios web, carros de compra y blogs pensados para reforzar la imagen de su marca en Internet. </p>
 </div></div></div></div></div><div class="wf-cell"><div><div class="text-big"><div class="wf-table"><div class="wf-td"><span class="benefits-grid-ico"><i class="fa fa-video-camera"></i></span></div><div class="wf-td benefits-inner"><h4>Seguridad por Imágenes</h4><p>Curabitur pellentesque neque eget diam posuere porta glavrida lorem dolor ut nulla at nunc.</p>
