--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 	 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5><span class="color-base-transparent">Administrador de Redes, </span></h5>
+			<h5><span class="color-base-transparent">Programador </span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
