--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 						<!-- !- Navigation -->
 		<nav id="navigation" class="wf-td" tyle="user-select: none; position: absolute; width: 113%; height: 100%; left: 0px; top: 0px; visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, -87.5, 0); transform-origin: 0% 0% 0px;">
 			<ul id="main-nav"  class="fancy-rollovers wf-mobile-hidden">
-<li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-592 current_page_item menu-item-14844 act first menu-frame-on"><a href="#main-slideshow"><span>HOME</span></a></li> 
-<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14870 menu-frame-on"><a href="#main"><span>NUESTRA EMPRESA</span></a></li> 
-<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14871 menu-frame-on"><a href="#benefits-grid-1"><span>NUESTRO SERVICIO</span></a></li> 
-<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14872 menu-frame-on"><a href="#pricing"><span>NUESTROS CLIENTES</span></a></li> 
-<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14873 menu-frame-on"><a href="#team"><span>NUESTRO EQUIPO</span></a></li> 
-<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14874 menu-frame-on"><a href="#contact"><span>CONTACTO</span></a></li> 
+<li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-592 current_page_item menu-item-14844 act first menu-frame-on" style="text-shadow: 2px 2px lightblue;"><a href="#main-slideshow"><span>HOME</span></a></li> 
+<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14870 menu-frame-on" style="text-shadow: 2px 2px lightblue"><a href="#main"><span>NUESTRA EMPRESA</span></a></li> 
+<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14871 menu-frame-on" style="text-shadow: 2px 2px lightblue"><a href="#benefits-grid-1"><span>NUESTRO SERVICIO</span></a></li> 
+<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14872 menu-frame-on" style="text-shadow: 2px 2px lightblue"><a href="#pricing"><span>NUESTROS CLIENTES</span></a></li> 
+<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14873 menu-frame-on" style="text-shadow: 2px 2px lightblue"><a href="#team"><span>NUESTRO EQUIPO</span></a></li> 
+<li class=" menu-item menu-item-type-custom menu-item-object-custom menu-item-14874 menu-frame-on" style="text-shadow: 2px 2px lightblue"><a href="#contact"><span>CONTACTO</span></a></li> 
 </ul>
 				<a href="#show-menu" rel="nofollow" id="mobile-menu" class="accent-bg">
 					<span class="menu-open">Menu</span>
@@ -252,7 +252,7 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 			data-endelementdelay="0.1" 
 			 data-endspeed="600" 
 
-			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;">Tecnología CCTV,</br>camaras de seguridad
+			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;-webkit-text-stroke:1.5px black;">Tecnología CCTV,</br>camaras de seguridad
  
 		</div>
 
@@ -343,7 +343,7 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 			data-endelementdelay="0.1" 
 			data-endspeed="600" 
 
-			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;">Diseño Web Responsive
+			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;-webkit-text-stroke:1.5px black;">Diseño Web Responsive
  
 		</div>
 
@@ -416,7 +416,7 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 			data-endelementdelay="0.1" 
 			 data-endspeed="600" 
 
-			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;">Facturación</br> Electrónica
+			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;-webkit-text-stroke:1.5px black;">Facturación</br> Electrónica
 		</div>
 
 		<!-- LAYER NR. 2 -->
@@ -633,8 +633,8 @@ Evitar el papel, las impresiones, la carga </br>manual de datos, los múltiples 
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h1 style="text-align: center;font-weight: 600;">ACERCA DE NUESTRA EMPRESA</h1>
-<h3 style="text-align: center;">QUIENES SOMOS Y QUE HACEMOS</h3>
+			<h1 style="text-align: center;font-weight: 600;text-shadow: 4px 4px lightblue;">ACERCA DE NUESTRA EMPRESA</h1>
+<h3 style="text-align: center;text-shadow: 2px 2px lightblue;">QUIENES SOMOS Y QUE HACEMOS</h3>
 
 		</div> 
 	</div> 
@@ -687,8 +687,8 @@ Evitar el papel, las impresiones, la carga </br>manual de datos, los múltiples 
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h1 style="text-align: center;font-weight: 600;" role="#servicios">NUESTRO SERVICIO</h1>
-<h3 style="text-align: center;"><span class="color-base">EN LO QUE SOMOS BUENOS</span></h3>
+			<h1 style="text-align: center;font-weight: 600;text-shadow: 4px 4px lightblue;" role="#servicios">NUESTRO SERVICIO</h1>
+<h3 style="text-align: center;text-shadow: 2px 2px lightblue;"><span class="color-base">EN LO QUE SOMOS BUENOS</span></h3>
 
 		</div> 
 	</div> 
@@ -756,8 +756,8 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element" >
 		<div class="wpb_wrapper" >
-			<h1 style="text-align: center;font-weight: 600;"> NUESTROS CLIENTES</h1>
-<h3 style="text-align: center;"><span class="color-base">ESTAMOS ORGULLOSOS DE TRABAJAR CON ELLOS</span></h3>
+			<h1 style="text-align: center;font-weight: 600;text-shadow: 4px 4px lightblue;"> NUESTROS CLIENTES</h1>
+<h3 style="text-align: center;text-shadow: 2px 2px lightblue;"><span class="color-base">ESTAMOS ORGULLOSOS DE TRABAJAR CON ELLOS</span></h3>
 
 		</div> 
 	</div> 
@@ -775,8 +775,8 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h1 style="text-align: center;font-weight: 600;" >DETRAS DE ESCENA </h1>
-<h3 style="text-align: center;">UN EQUIPO DE PROFESIONALES ALTAMENTE CALIFICADOS</h3>
+			<h1 style="text-align: center;font-weight: 600;text-shadow: 4px 4px lightblue;" >DETRAS DE ESCENA </h1>
+<h3 style="text-align: center;text-shadow: 2px 2px lightblue;">UN EQUIPO DE PROFESIONALES ALTAMENTE CALIFICADOS</h3>
 
 		</div> 
 	</div> 
@@ -1343,7 +1343,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h1 style="text-align: center; font-weight:600" style="vertical-align: center" >CONTACTO</h1>
+			<h1 style="text-align: center; font-weight:600;text-shadow: 4px 4px lightblue;" style="vertical-align: center" >CONTACTO</h1>
 <h3 style="text-align: center;"></h3>
 
 		</div> 
@@ -1356,7 +1356,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 id="contact">Envianos tu Consulta</h3>
+			<h3 id="contact"> <b style="color: black">Envianos tu Consulta</b> </h3>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 25px" ><span
@@ -1372,16 +1372,16 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f239-p592-o1" />
 <input type="hidden" name="_wpnonce" value="c1d067a1ec" />
 </div>
-<p style="color: black;">Tu nombre (requerido)
-<p >
+<p style="color: black;"> <b>Tu nombre (requerido)</b> <p >
+
     <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" /></span> </p>
-<p style="color: black;">Tu Email (requerido)<br />
+<p style="color: black;"> <b>Tu Email (requerido)</b> <br />
     <span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" /></span> </p>
-<p style="color: black;">Motivo del contacto<br />
+<p style="color: black;"> <b>Motivo del contacto</b> <br />
 <span  class="wpcf7-form-control-wrap menu-413"><select name="menu-413" class="wpcf7-form-control wpcf7-select" aria-invalid="false"><option value="Consulta general">Consulta general</option><option value="Consulta comercial">Consulta comercial</option><option value="Otros">Otros</option></select></span></p>
-<p style="color: black;">Asunto<br />
+<p style="color: black;"> <b>Asunto</b> <br />
     <span class="wpcf7-form-control-wrap your-subject"><input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text" aria-invalid="false" /></span> </p>
-<p style="color: black;">Tu Mensaje<br />
+<p style="color: black;"> <b>Tu Mensaje</b> <br />
     <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false"></textarea></span> </p>
 <!-- <p><em>To use CAPTCHA, you need <a href="http://wordpress.org/extend/plugins/really-simple-captcha/">Really Simple CAPTCHA</a> plugin installed.</em> -->
 <!-- <p>Ingrese el código<br /> -->
@@ -1399,16 +1399,16 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black;">Información de contacto</h3>
+			<h3 style="color: black;"> <b>Información de contacto</b> </h3>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 18px" ><span
 			class="vc_empty_space_inner"></span></div>
 
 
-	<div class="wpb_text_column wpb_content_element  ">
+	<div class="wpb_text_column wpb_content_element  " >
 		<div class="wpb_wrapper" style="color: black;">
-			<p style="color: black;"><span class="color-title">Direccion:</span><br />
+			<p style="color: black; "><span class="color-title"> <b style="color: black">Direccion:</b> </span><br />
 José Roque Funes 1145, Local 4 y 5.</p>
 
 		</div> 
@@ -1418,7 +1418,7 @@ José Roque Funes 1145, Local 4 y 5.</p>
 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<p style="color: black;"><span class="color-title">Teléfono:</span><br />
+			<p style="color: black;"><span class="color-title"> <b style="color:black">Teléfono:</b> </span><br />
 (0351) 442-9668</p>
 
 		</div> 
@@ -1428,7 +1428,7 @@ José Roque Funes 1145, Local 4 y 5.</p>
 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<p style="color: black;"><span class="color-title">Email:</span><br />
+			<p style="color: black;"><span class="color-title"> <b style="color:black">Email:</b> </span><br />
 <a href="mailto:info@siscord.com.ar"></a></p>
 
 		</div> 
