--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ Evitar el papel, las impresiones, la carga </br>manual de datos, los múltiples 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
 			<h1 style="text-align: center;font-weight: 600;text-shadow: 4px 4px lightblue;">ACERCA DE NUESTRA EMPRESA</h1>
-<h3 style="text-align: center;text-shadow: 2px 2px lightblue;">QUIENES SOMOS Y QUE HACEMOS</h3>
+<h3 style="text-align: center;text-shadow: 2px 2px lightblue;"><b>QUIENES SOMOS Y QUE HACEMOS</b> </h3>
 
 		</div> 
 	</div> 
@@ -665,7 +665,7 @@ Evitar el papel, las impresiones, la carga </br>manual de datos, los múltiples 
 	</div> 	<div class="vc_empty_space"  style="height: 12px" ><span
 			class="vc_empty_space_inner"></span></div>
 
-<a href="#!/team" class="dt-btn-m btn-link ico-right-side anchor-link" style=color:black>Acerca de nuestro equipo<i class="fa fa-chevron-circle-right"></i></a>	<div class="vc_empty_space"  style="height: 50px" ><span
+<a href="#!/team" class="dt-btn-m btn-link ico-right-side anchor-link" style=color:black><b>Acerca de nuestro equipo</b> <i class="fa fa-chevron-circle-right"></i></a>	<div class="vc_empty_space"  style="height: 50px" ><span
 			class="vc_empty_space_inner"></span></div>
 
 
@@ -688,7 +688,7 @@ Evitar el papel, las impresiones, la carga </br>manual de datos, los múltiples 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
 			<h1 style="text-align: center;font-weight: 600;text-shadow: 4px 4px lightblue;" role="#servicios">NUESTRO SERVICIO</h1>
-<h3 style="text-align: center;text-shadow: 2px 2px lightblue;"><span class="color-base">EN LO QUE SOMOS BUENOS</span></h3>
+<h3 style="text-align: center;text-shadow: 2px 2px lightblue;"><span class="color-base"><b>EN LO QUE SOMOS BUENOS</b> </span></h3>
 
 		</div> 
 	</div> 
@@ -757,7 +757,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 	<div class="wpb_text_column wpb_content_element" >
 		<div class="wpb_wrapper" >
 			<h1 style="text-align: center;font-weight: 600;text-shadow: 4px 4px lightblue;"> NUESTROS CLIENTES</h1>
-<h3 style="text-align: center;text-shadow: 2px 2px lightblue;"><span class="color-base">ESTAMOS ORGULLOSOS DE TRABAJAR CON ELLOS</span></h3>
+<h3 style="text-align: center;text-shadow: 2px 2px lightblue;"><span class="color-base"><b>ESTAMOS ORGULLOSOS DE TRABAJAR CON ELLOS</b> </span></h3>
 
 		</div> 
 	</div> 
@@ -776,7 +776,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
 			<h1 style="text-align: center;font-weight: 600;text-shadow: 4px 4px lightblue;" >DETRAS DE ESCENA </h1>
-<h3 style="text-align: center;text-shadow: 2px 2px lightblue;">UN EQUIPO DE PROFESIONALES ALTAMENTE CALIFICADOS</h3>
+<h3 style="text-align: center;text-shadow: 2px 2px lightblue;"><b>UN EQUIPO DE PROFESIONALES ALTAMENTE CALIFICADOS</b> </h3>
 
 		</div> 
 	</div> 
@@ -803,13 +803,13 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Jorge Cascone</h3>
+			<h3 style="color: black;font-weight: 600">Jorge Cascone</h3>
 
 		</div> 
 	</div> 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5><span class="color-base-transparent" style="color: black">Co Fundador</span><span class="color-base-transparent" style="color: black">, Administrador de Redes, </span></h5>
+			<h5><span class="color-base-transparent" style="color: grey"><b>Co Fundador</b></span><span class="color-base-transparent" style="color: grey"><b>, Administrador de Redes</b>  </span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
@@ -857,13 +857,13 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Gabriel Genga</h3>
+			<h3 style="color: black;font-weight: 600">Gabriel Genga</h3>
 
 		</div> 
 	</div> 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5 style="color: black"><span class="color-base-transparent" style="color: black">Co Fundador</span><span class="color-base-transparent" style="color: black">, Administrador Programador </span></h5>
+			<h5 style="color: grey"><span class="color-base-transparent" style="color: grey"><b>Co Fundador</b></span><span class="color-base-transparent" style="color: grey"><b>, Administrador Programador</b></span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
@@ -911,13 +911,13 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Gustavo Vergonjeane</h3>
+			<h3 style="color: black;font-weight: 600">Gustavo Vergonjeane</h3>
 
 		</div> 
 	</div> 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5 style="color: black"><span class="color-base-transparent" style="color: black">Co Fundador</span><span class="color-base-transparent" style="color: black">, Administrador Programador </span></h5>
+			<h5 style="color: grey"><span class="color-base-transparent" style="color: grey"><b>Co Fundador</b></span><span class="color-base-transparent" style="color: grey"><b>, Administrador Programador</b></span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
@@ -967,13 +967,13 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Pablo Ortiz</h3>
+			<h3 style="color: black;font-weight: 600">Pablo Ortiz</h3>
 
 		</div> 
 	</div> 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5 style="color: black"><span class="color-base-transparent" style="color: black">Co Fundador, Programador</span></h5>
+			<h5 style="color: grey"><span class="color-base-transparent" style="color: grey"><b>Co Fundador, Programador</b> </span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
@@ -1020,7 +1020,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Gustavo Ponte</h3>
+			<h3 style="color: black;font-weight: 600">Gustavo Ponte</h3>
 
 		</div> 
 
@@ -1028,7 +1028,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 	 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5><span class="color-base-transparent" style="color: black">Programador </span></h5>
+			<h5><span class="color-base-transparent" style="color: grey"><b>Programador</b></span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
@@ -1075,7 +1075,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Fernando Paez</h3>
+			<h3 style="color: black;font-weight: 600">Fernando Paez</h3>
 
 		</div> 
 
@@ -1083,7 +1083,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 	 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5><span class="color-base-transparent" style="color: black">Programador </span></h5>
+			<h5><span class="color-base-transparent" style="color: grey"><b>Programador</b></span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
@@ -1130,7 +1130,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Julio Robert </h3>
+			<h3 style="color: black;font-weight: 600">Julio Robert </h3>
 
 		</div> 
 
@@ -1138,7 +1138,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 	 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5><span class="color-base-transparent" style="color: black">Programador </span></h5>
+			<h5><span class="color-base-transparent" style="color: grey"><b>Programador</b></span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
@@ -1185,7 +1185,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Diego Rico</h3>
+			<h3 style="color: black;font-weight: 600">Diego Rico</h3>
 
 		</div> 
 
@@ -1193,7 +1193,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 	 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5><span class="color-base-transparent" style="color: black">Programador </span></h5>
+			<h5><span class="color-base-transparent" style="color: grey"><b>Programador</b></span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
@@ -1240,7 +1240,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Mauricio Barrientos</h3>
+			<h3 style="color: black;font-weight: 600">Mauricio Barrientos</h3>
 
 		</div> 
 
@@ -1248,7 +1248,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 	 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5><span class="color-base-transparent" style="color: black">Tecnico </span></h5>
+			<h5><span class="color-base-transparent" style="color: grey"><b>Tecnico</b></span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
@@ -1295,13 +1295,13 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 			
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h3 style="color: black">Marcelo Randazzo</h3>
+			<h3 style="color: black;font-weight: 600;">Marcelo Randazzo</h3>
 
 		</div> 
 	</div> 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<h5><span class="color-base-transparent" style="color: black">Tecnico</span></h5>
+			<h5><span class="color-base-transparent" style="color: grey"><b>Tecnico</b></span></h5>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 14px" ><span
