--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<p style="color: black">Tecnico Especializado en Software y Hardware.</p>
+			<p style="color: black">Tecnico Especializado en Software y Hardware. <br> Solutions Architect Associate - Amazon Web Services</p>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 18px" ><span
