--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 			data-endelementdelay="0.1" 
 			 data-endspeed="600" 
 
-			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;text-shadow: 2px 2px lightblue;">Soporte <br> Técnico Integral
+			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;">Soporte <br> Técnico Integral
  
 		</div>
 
 		<!-- LAYER NR. 2 -->
 		<div class="tp-caption dt_the7_large_caption customin customout" 
-			 data-x="center" data-hoffset="447" 
+			 data-x="center" data-hoffset="380" 
 			 data-y="center" data-voffset="116" 
 			data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" 
 			 data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" 
@@ -345,7 +345,7 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 			data-endelementdelay="0.1" 
 			data-endspeed="600" 
 
-			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;text-shadow: 2px 2px lightblue;">Desarrollo de Software </br> a Medida
+			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;">Desarrollo de Software </br> a Medida
  
 		</div>
 
@@ -420,7 +420,7 @@ var dtLocal = {"passText":"To view this protected post, enter the password below
 			data-endelementdelay="0.1" 
 			 data-endspeed="600" 
 
-			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;text-shadow: 2px 2px lightblue;">Servicios</br> Cloud
+			style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 600;">Servicios</br> Cloud
 		</div>
 
 		<!-- LAYER NR. 2 -->
@@ -824,7 +824,7 @@ Provisión / administración de servidores virtuales de capacidad ilimitada.</p>
 
 	<div class="wpb_text_column wpb_content_element  ">
 		<div class="wpb_wrapper">
-			<p style="color: black">Tecnico Especializado en Software y Hardware. <br> Solutions Architect Associate - Amazon Web Services</p>
+			<p style="color: black">Tecnico Especializado en Software y Hardware. <br> <a href="https://www.credly.com/badges/c306ce1e-613d-433b-b59d-cb39d3c2cb73/public_url"; style="text-decoration: none" target="_blank">Solutions Architect Associate - Amazon Web Services</a> </p>
 
 		</div> 
 	</div> 	<div class="vc_empty_space"  style="height: 18px" ><span
